2007-08-23  Derek Price  <derek@ximbiot.com>

	* .cvsignore: Remove error.m4.
	* m4/fseeko.m4, m4/ftello.m4, m4/lseek.m4: New files from GNULIB.

2007-08-22  Derek Price  <derek@ximbiot.com>

	* .cvsignore: New file from GNULIB.
	* absolute-header.m4, alloca.m4, canon-host.m4, canonicalize.m4,
	chdir-long.m4, chown.m4, clock_time.m4, close-stream.m4, codeset.m4,
	cycle-check.m4, d-ino.m4, double-slash-root.m4, dup2.m4, eoverflow.m4,
	extensions.m4, fcntl-safer.m4, fcntl_h.m4, fnmatch.m4, fpending.m4,
	ftruncate.m4, getaddrinfo.m4, getcwd-path-max.m4, getcwd.m4,
	getlogin_r.m4, getndelim2.m4, getpass.m4, gettext.m4, gettimeofday.m4,
	glob.m4, gnulib-cache.m4, gnulib-comp.m4, iconv.m4, intdiv0.m4,
	intmax.m4, inttypes-pri.m4, inttypes.m4, lchown.m4, lib-link.m4,
	lock.m4, longlong.m4, lstat.m4, mbchar.m4, mempcpy.m4, memrchr.m4,
	mkstemp.m4, mktime.m4, nanosleep.m4, netinet_in_h.m4, openat.m4,
	printf-posix.m4, quotearg.m4, readlink.m4, regex.m4, setenv.m4,
	size_max.m4, snprintf.m4, socklen.m4, stdint.m4, strcase.m4,
	strdup.m4, strerror.m4, strftime.m4, strndup.m4, strnlen.m4,
	sys_socket_h.m4, sys_stat_h.m4, time_r.m4, timespec.m4, tzset.m4,
	ulonglong.m4, unistd_h.m4, vasnprintf.m4, vasprintf.m4, wcwidth.m4,
	wint_t.m4, xalloc.m4: Update from GNULIB.
	* allocsa.m4: GNULIB update renamed to...
	* malloca.m4: ...this.
	* strstr.m4: GNULIB update renamed to...
	* mbsstr.m4: ...this.
	* longdouble.m4, inttypes-h.m4, signed.m4, stat-macros.m4,
	xreadlink.m4: GNULIB update removed this obsolete file.
	* canonicalize-lgpl.m4, dirfd.m4, fchdir.m4, float_h.m4,
	gnulib-common.m4, include_next.m4, inline.m4, intl.m4, intldir.m4,
	intlmacosx.m4, localcharset.m4, mbslen.m4, stdio_h.m4, stdlib_h.m4,
	string_h.m4, sys_time_h.m4, tempname.m4, time_h.m4, wchar.m4,
	wctype.m4: New files from GNULIB.

2007-08-21  Derek Price  <derek@ximbiot.com>

	* bison.m4: Unfork.

2006-09-25  Mark D. Baushke  <mdb@gnu.org>

	* fnmatch.m4, getdate.m4, lock.m4, mkdir-slash.m4, signed.m4,